# Cookbook

./: .gitignore  ANSI Prompt Colours.txt  Batch scripting notes.md  C_Cpp Compiler and IDE Options.txt  C_Cpp Install gcc on Windows with MSYS2.html  Cpp_Compiling Qt5 from source.txt  Debian Package dpkg Tutorial.html  Docker Tutorial.html  Drupal 7-31 HTTP Parametery Key Value SQL injection.txt  Fix Rails 5.2 on Windows SQLite error.txt  GPG Basics Tutorial.html  Go Compile for Docker.md  Go cross compiling.html  Google Hacking.md  Java Beans.md  Java Creating and Using Packages.md  Java JAR Tutorial.md  Java Server Pages (JSP) Tutorial.md  Java Servlet Tutorial.md  Java TomCat Tutorial.html  Java packet capturing.html  LetsEncrypt SSL Tutorial.html  Managing LetsEncrypt certs.md  Maven Tutorial.html  Maven Upload to Central Repository.md  Nginx Tutorial.html  One-line HTTP servers.html  OpenSSL Create self-signed SSL cert.html  OpenVPN Server Setup Tutorial.md  Philips Hue Programming.txt  Python ASCII art banner.html  Python Colorize Terminal  Output.html  Python Curses Tutorial.html  Python Curses in Windows.html  Python Dialog Boxes.html  Python Grab Image from Clipboard.html  Python Text to Speech.html  Python Windows Desktop Notifications.html  README.md  Sqlite3 Tutorial.html  (+10 more)
AWS/: Send email.md
Amazon Web Service AWS/: Using AWS CLI.md
Amazon Web Service AWS CLI/: Copy file to S3.md
C_Cpp/: GUI options.txt  windows_gcc_messagebox.c  windows_main_window.c
HTML-CSS-JS/: google-fonts.html  (+4 more)
c++/cmake/: CMakeLists.txt
meson/: .gitignore  main.c  meson.build
(+1741 files in other folders)
