project(SimpleExample)

# Generate build files with: `cmake .`
# Then, in Linux run: `make` with the generated Makefile

# add_library(CustomFunctions custom_functions.cpp)
# include_directories(CustomFunctions)
# link_libraries("-static")
# target_link_libraries(CustomFunctions)

add_executable(main main.cpp)

